<resources>
    <string name="app_name">ContactsBook</string>


        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_display_contact">DisplayContact</string>
        <string name="Add_New">Add New</string>
        <string name="edit">Edit Contact</string>
        <string name="delete">Delete Contact</string>
        <string name="surname">Surame</string>
        <string name="phone">Phone</string>
        <string name="email">Email</string>
        <string name="secname">Second Name</string>
        <string name="name">Name</string>
        <string name="save">Save Contact</string>
        <string name="deleteContact">Are you sure, you want to delete it.</string>
        <string name="yes">Yes</string>
        <string name="no">No</string>

</resources>
